--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --mode development",
     "start": "electron .",
     "build": "vue-tsc -b && vite build && electron-builder",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint --config eslint.config.mjs --fix --ext .vue,.ts",
     "type-check": "vue-tsc --noEmit",
     "electron:build": "npm run build"
   },
@@ -35,22 +35,24 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "concurrently": "^9.1.0",
-    "electron": "^35.1.2",
+    "concurrently": "^9.1.2",
+    "electron": "^35.1.4",
     "electron-builder": "^26.0.12",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.22.0",
-    "typescript": "~5.3.0",
-    "vite": "^6.2.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.5",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vue-tsc": "^2.2.4"
+    "vue-tsc": "^2.2.8"
   }
 }
